Fixed overlap

--- a/assets/css/common/_items.scss
+++ b/assets/css/common/_items.scss
@@ -144,8 +144,9 @@
 //------------------------------------------------------//
 .flex-Fases {
   padding-top: 0 !important;
-  margin-top: -60px;
-  margin-top: -120px;
+  @include media-breakpoint-up(lg) {
+    margin-top: -120px;
+  }
   .flex-FasesItem {
     @include media-breakpoint-down(xs) {
       margin-top: -50px;
